# qt-cmake-template

./: CMakeCache.txt  CMakeLists.txt  main.cpp  readme.md
apps/: CMakeLists.txt  main.cpp  main.qml
toolchains/: arch-x64.cmake  debian-arm64.cmake  debian-x64.cmake  fedora-arm64.cmake  fedora-x64.cmake  llvm-linux-arm64.cmake  llvm-linux-x64.cmake  llvm-win-arm64.cmake  llvm-win-x64.cmake  macos-arm64.cmake  macos-x64.cmake  native.cmake  opensuse-tumbleweed-arm64.cmake  opensuse-tumbleweed-x64.cmake  osxcross-macos-arm64.cmake  osxcross-macos-x64.cmake  win-arm64.cmake  win-x64.cmake
