find_package(Qt6 REQUIRED COMPONENTS Core Quick)
qt_add_executable(main main.cpp)
set_target_properties(main PROPERTIES CXX_SCAN_FOR_MODULES ON)
target_link_libraries(main PRIVATE Qt6::Quick)
if(APPLE)
    set_target_properties(main PROPERTIES MACOSX_BUNDLE TRUE)
elseif(WIN32)
    set_property(TARGET main PROPERTY WIN32_EXECUTABLE TRUE)
endif()
qt_add_resources(RESOURCES main.qrc)
target_sources(main PRIVATE ${RESOURCES})
