find_package(Qt6 REQUIRED COMPONENTS Core Quick WaylandClient)
qt_add_executable(main main.cpp)
set_target_properties(main PROPERTIES CXX_SCAN_FOR_MODULES ON)
target_link_libraries(main PRIVATE Qt6::Quick Qt6::WaylandClient ${Qt6_DIR}/../../../plugins/platforms/libqwayland.a)
if(APPLE)
    set_target_properties(main PROPERTIES MACOSX_BUNDLE TRUE)
elseif(WIN32)
    set_property(TARGET main PROPERTY WIN32_EXECUTABLE TRUE)
endif()
qt_add_resources(RESOURCES main.qrc)
target_sources(main PRIVATE ${RESOURCES})
# target_include_directories(main PUBLIC ${CMAKE_SOURCE_DIR}/test)
# target_link_libraries(main PRIVATE ${CMAKE_SOURCE_DIR}/test/build/libtest.a)
